--- a/css/style.css
+++ b/css/style.css
@@ -251,57 +251,13 @@ ol {
   left: 0;
   z-index: 999999;
   background: #000;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.loader {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -13px;
-  margin-left: -13px;
-  border-radius: 60px;
-  animation: loader 0.8s linear infinite;
-  -webkit-animation: loader 0.8s linear infinite;
-}
-
-@keyframes loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
-  }
-  50% {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-    border: 4px solid #673ab7;
-    border-left-color: transparent;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
-  }
-}
-
-@-webkit-keyframes loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
-  }
-  50% {
-    -webkit-transform: rotate(180deg);
-    border: 4px solid #673ab7;
-    border-left-color: transparent;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    border: 4px solid #f44336;
-    border-left-color: transparent;
+  & svg {
+    width: 400px;
+    height: 400px;
   }
 }
 
@@ -748,6 +704,56 @@ ol {
   }
 }
 
+.achievement__slider.owl-carousel .owl-nav button {
+  &::before {
+    content: "";
+  }
+}
+
+.achievement__slider.owl-carousel .owl-nav button.owl-next {
+  background-color: var(--muted);
+  color: var(--primary);
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 52%;
+  top: 111%;
+
+  & {
+    @media screen and (min-width: 1200px) {
+      left: -28%;
+      top: 80%;
+    }
+
+    @media screen and (max-width: 768px) {
+      left: 50%;
+    }
+  }
+}
+
+.achievement__slider.owl-carousel .owl-nav button.owl-prev {
+  background-color: var(--muted);
+  color: var(--primary);
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 43%;
+  top: 111%;
+
+  & {
+    @media screen and (min-width: 1200px) {
+      left: -35%;
+      top: 80%;
+    }
+
+    @media screen and (max-width: 768px) {
+      left: 35%;
+    }
+  }
+}
+
 .project__slider.owl-carousel .owl-nav button.owl-next {
   left: auto;
   right: 35px;
@@ -918,7 +924,7 @@ ol {
 }
 
 .testimonial__client .slick-slide {
-  width: 100px;
+  min-width: 100px;
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s;
@@ -932,6 +938,8 @@ ol {
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s;
+  width: 60px;
+  height: 60px;
 }
 
 .slick-active.slick-center {
@@ -939,13 +947,12 @@ ol {
 }
 
 .slick-active.slick-center .testimonial__client__pic {
-  height: 150px;
   width: 150px;
   position: absolute;
   left: 0px;
-  top: -30px;
+  top: -35px;
   right: -15px;
-  margin: 0 auto;
+  margin: 0 auto -25px auto;
   position: relative;
   z-index: 1;
   padding-top: 5px;
@@ -953,13 +960,14 @@ ol {
 
 .slick-active.slick-center .testimonial__client__pic img {
   margin: 0 auto;
-  width: 150px;
-  height: 150px;
+  width: 60px;
+  height: 60px;
 }
 
 .slick-active.slick-center .testimonial__client__text {
-  display: block;
-  margin-top: -8px;
+  display: flex;
+  flex-direction: column;
+  margin-top: -50px;
 }
 
 .testimonial__client__item {
@@ -968,8 +976,8 @@ ol {
 }
 
 .testimonial__client__item .testimonial__client__pic {
-  height: 70px;
-  width: 70px;
+  height: 90px;
+  width: 90px;
   margin: 0 auto;
 }
 
@@ -1429,6 +1437,13 @@ ol {
   color: #343433;
 }
 
+.footer__social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
 .footer__about .footer__social a {
   font-size: 18px;
   color: #ffffff;
@@ -1578,7 +1593,8 @@ ol {
 .video-classic {
   position: relative;
   max-width: 533px;
-  z-index: 1; /* Slider com z-index menor */
+  width: 100%;
+  z-index: auto;
 }
 
 .video-classic-link {
@@ -1589,7 +1605,6 @@ ol {
   font-size: 48px;
   color: white;
   cursor: pointer;
-  z-index: 2;
 
   & svg {
     width: 28px;
@@ -1597,20 +1612,56 @@ ol {
   }
 }
 
-video {
+.video {
   width: 100%;
-  height: auto;
-  display: block;
+  height: 400px;
+  border: none;
+  background-color: black;
+  position: relative;
 }
 
-.fullscreen-video {
+.video-popup {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.8);
+  max-width: 800px;
+  width: 100%;
+  z-index: 1001;
+  padding: 10px;
+  background: #fff;
+  z-index: 1000;
+  align-items: center;
+  justify-content: center;
+  isolation: isolate;
+}
+
+.popup-bg {
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
   height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+
+.popup-content {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
   z-index: 9999;
-  background-color: black;
+  padding-inline: 20px;
+
+  & video,
+  iframe {
+    max-width: 800px;
+    width: 100%;
+  }
 }
 
 .close-fullscreen {
@@ -1619,10 +1670,9 @@ video {
   right: 10px;
   font-size: 24px;
   color: white;
-  background-color: rgba(0, 0, 0, 0.5);
   padding: 5px 10px;
   cursor: pointer;
-  z-index: 10000;
+  z-index: 100000;
 }
 
 .about {
@@ -2747,11 +2797,317 @@ video {
   color: #b7b7b7;
 }
 
+/* Achievements */
+.blog-three {
+  position: relative;
+  display: block;
+  padding: 120px 0 120px;
+  overflow: hidden;
+}
+
+.blog-three__left {
+  position: relative;
+  display: block;
+  margin-right: 24px;
+  z-index: 5;
+}
+
+.blog-three__text {
+  margin-bottom: 30px;
+}
+
+.blog-three .section-title {
+  text-align: center !important;
+  margin-bottom: 20px;
+
+  & {
+    @media screen and (min-width: 768px) {
+      text-align: left !important;
+      margin-bottom: 40px;
+    }
+  }
+}
+
+.blog-three .section-title__line {
+  left: 0;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.blog-three__right {
+  position: relative;
+  display: block;
+  z-index: 1;
+}
+
+.blog-three__right::before {
+  position: absolute;
+  top: -120px;
+  left: 170px;
+  bottom: -120px;
+  right: -1000000000px;
+  content: "";
+  z-index: -1;
+}
+
+.blog-three__carousel {
+  position: relative;
+  display: block;
+}
+
+.blog-three__right .blog-one__single {
+  margin-bottom: 0px;
+}
+
+.blog-three__carousel.owl-carousel .owl-stage-outer {
+  overflow: visible;
+}
+
+.blog-three__carousel.owl-carousel .owl-stage-outer {
+  overflow: visible;
+}
+
+.blog-three__carousel.owl-carousel .owl-item {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 500ms ease, visibility 500ms ease;
+  transition: opacity 500ms ease, visibility 500ms ease;
+}
+
+.blog-three__carousel.owl-carousel .owl-item.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.blog-three__carousel.owl-theme .owl-nav {
+  position: absolute;
+  bottom: 70px;
+  left: -300px;
+  margin-top: 0 !important;
+}
+
+.blog-three__carousel.owl-theme .owl-nav .owl-prev {
+  height: 55px;
+  width: 55px;
+  background: #f2eeeb;
+  border-radius: 50%;
+  color: var(--primary);
+  font-size: 15px;
+  text-align: center;
+  line-height: 55px;
+  margin: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.blog-three__carousel.owl-theme .owl-nav .owl-next {
+  height: 55px;
+  width: 55px;
+  background: var(--primary);
+  border-radius: 50%;
+  color: var(--primary);
+  font-size: 15px;
+  text-align: center;
+  line-height: 55px;
+  margin: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.blog-three__carousel.owl-theme .owl-nav .owl-prev {
+  margin-right: 5px;
+}
+
+.blog-three__carousel.owl-theme .owl-nav .owl-next {
+  margin-left: 5px;
+}
+
+.blog-three__carousel.owl-theme .owl-nav .owl-next span,
+.blog-three__carousel.owl-theme .owl-nav .owl-prev span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.blog-three__carousel.owl-theme .owl-nav .owl-next:hover,
+.blog-three__carousel.owl-theme .owl-nav .owl-prev:hover {
+  background-color: var(--muted);
+  color: #ffffff;
+}
+
+.blog-one {
+  position: relative;
+  display: block;
+  padding: 120px 0 90px;
+}
+
+.blog-one--carousel {
+  padding-bottom: 120px;
+}
+
+.blog-one__single {
+  position: relative;
+  display: block;
+  margin-bottom: 30px;
+}
+
+.blog-one__img {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+
+.blog-one__img img {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  will-change: transform;
+  transform-origin: center;
+}
+
+.blog-one__single:hover .blog-one__img img {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.blog-one__img > a {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(60, 53, 49, 0.5);
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 30px;
+  color: var(--muted);
+  -webkit-transition: opacity 500ms ease, visibility 500ms ease,
+    -webkit-transform 500ms ease;
+  transition: opacity 500ms ease, visibility 500ms ease,
+    -webkit-transform 500ms ease;
+  transition: opacity 500ms ease, visibility 500ms ease, transform 500ms ease;
+  transition: opacity 500ms ease, visibility 500ms ease, transform 500ms ease,
+    -webkit-transform 500ms ease;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transform: translateY(-30%);
+  transform: translateY(-30%);
+}
+
+.blog-one__img > a > span {
+  position: relative;
+}
+
+.blog-one__img > a > span::before {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.blog-one__img > a > span::after {
+  content: "";
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  width: 2px;
+  height: 20px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.blog-one__img > a:hover > span::before,
+.blog-one__img > a:hover > span::after {
+  background-color: #ffffff;
+}
+
+.blog-one__single:hover .blog-one__img > a {
+  visibility: visible;
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+  opacity: 1;
+}
+
+.blog-one__content {
+  position: relative;
+  display: block;
+  background-color: var(--muted);
+  padding: 32px 40px 29px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.blog-one__single:hover .blog-one__content {
+  background-color: white;
+  -webkit-box-shadow: 0px 10px 60px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 10px 60px 0px rgba(0, 0, 0, 0.07);
+}
+
+.blog-one__date {
+  position: absolute;
+  top: -19px;
+  right: 30px;
+  background-color: var(--muted);
+  padding: 8px 20px 8px;
+  z-index: 2;
+}
+
+.blog-one__date p {
+  font-size: 12px;
+  color: #fff;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.blog-one__title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 36px;
+}
+
+.blog-one__title a {
+  color: var(--primary);
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.blog-one__title a:hover {
+  color: var(--secondary);
+}
+
 /*--------------------------------- Responsive Media Queries -----------------------------*/
 
 @media only screen and (min-width: 1200px) {
   .container {
     max-width: 1170px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .blog-three__right::before {
+    background-color: var(--primary);
   }
 }
 
@@ -3202,13 +3558,9 @@ video {
   }
   .slick-active.slick-center .testimonial__client__pic img,
   .slick-active.slick-center .testimonial__client__pic {
-    width: 110px;
-    height: 110px;
     opacity: 1;
   }
   .testimonial__client__item .testimonial__client__pic {
-    width: 110px;
-    height: 110px;
     opacity: 0;
   }
   .testimonial__carousel:after {
