--- a/css/style.css
+++ b/css/style.css
@@ -693,7 +693,6 @@ ol {
   position: relative;
   overflow: hidden;
 }
-
 .project__slider__item:hover .project__slider__item__hover {
   bottom: 12px;
 }
@@ -729,6 +728,49 @@ ol {
   &::before {
     content: "";
   }
+}
+
+.videos__slider.owl-carousel .owl-nav button {
+  height: 50px;
+  width: 50px;
+  background: #ffffff;
+  font-size: 28px;
+  color: #111111;
+  position: absolute;
+  left: 35px;
+  top: 50%;
+  margin-top: -25px;
+  line-height: 54px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &::before {
+    content: "";
+  }
+}
+
+.videos__slider__item {
+  height: 600px;
+  position: relative;
+  overflow: hidden;
+}
+
+.videos__slider__item:hover .videos__slider__item__hover {
+  bottom: 12px;
+}
+
+.videos__slider__item:hover .videos__slider__item__hover span {
+  left: 0;
+}
+
+.videos__slider__item:hover .videos__slider__item__hover h5 {
+  right: 0;
+}
+
+.videos__slider.owl-carousel .col-lg-3 {
+  max-width: 100%;
 }
 
 .achievement__slider.owl-carousel .owl-nav button {
@@ -834,6 +876,66 @@ ol {
   -o-transition: all, 1s;
   transition: all, 1s;
 }
+
+.project__slider.owl-carousel .owl-nav button.owl-next {
+  left: auto;
+  right: 35px;
+}
+
+.videos__slider__item__hover {
+  background: #ffffff;
+  position: absolute;
+  right: 12px;
+  bottom: -500px;
+  width: fit-content;
+  padding: 15px 15px;
+  -webkit-transition: all, 0.5s;
+  -o-transition: all, 0.5s;
+  transition: all, 0.5s;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-radius: 8px;
+  cursor: pointer;
+
+  & img {
+    width: 20px !important;
+    height: 20px !important;
+  }
+}
+
+.videos__slider__item__hover span {
+  color: #d3b8b0;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  display: block;
+  margin-bottom: 10px;
+  position: relative;
+  left: 30px;
+  -webkit-transition: all, 1s;
+  -o-transition: all, 1s;
+  transition: all, 1s;
+}
+
+.videos__slider__item__hover h5 {
+  color: #111111;
+  font-size: 20px;
+  text-transform: uppercase;
+  position: relative;
+  right: 30px;
+  -webkit-transition: all, 1s;
+  -o-transition: all, 1s;
+  transition: all, 1s;
+}
+
+.videos__slider.owl-carousel .owl-nav button.owl-next {
+  left: auto;
+  right: 35px;
+}
+
 
 /*---------------------
   Testimonial
@@ -1201,6 +1303,7 @@ ol {
   line-height: 1.4;
   margin-bottom: 36px;
   text-transform: none;
+  font-weight: 400;
 }
 
 .callto__text .primary-btn {
@@ -1471,7 +1574,7 @@ ol {
   flex: 1;
 
   & i {
-   font-size: large;
+    font-size: large;
   }
 }
 
@@ -1482,7 +1585,6 @@ ol {
   -o-transition: all, 0.3s;
   transition: all, 0.3s;
   margin-right: 30px;
-
 }
 
 .footer__about .footer__social a:hover {
@@ -1801,25 +1903,29 @@ ol {
 }
 
 .services__item {
-  margin-bottom: 30px;
+  margin-bottom: 80px;
+  height: 147px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 
   & svg {
-    width: 60px;
-    height: 60px;
-    fill: var(--secondary);
+    width: 30px;
+    height: 30px;
+    fill: var(--primary);
   }
 }
 
 .services__item h4 {
   color: #111111;
   text-transform: uppercase;
-  margin-top: 35px;
-  margin-bottom: 22px;
+  margin-top: 12px;
   font-size: 1.125rem;
 }
 
 .services__item p {
   margin-bottom: 0;
+  margin-top: 5px;
 }
 
 /*---------------------
@@ -3607,6 +3713,19 @@ ol {
     left: 15px;
   }
   .project__slider.owl-carousel .owl-nav button.owl-next {
+    right: 15px;
+  }
+
+  .videos__slider.owl-carousel .owl-nav button {
+    left: 15px;
+  }
+  .videos__slider.owl-carousel .owl-nav button.owl-next {
+    right: 15px;
+  }
+  .videos__slider.owl-carousel .owl-nav button {
+    left: 15px;
+  }
+  .videos__slider.owl-carousel .owl-nav button.owl-next {
     right: 15px;
   }
   .project {
