--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,4 @@
-/******************************************************************
-  Theme Name: Staging
-  Description: Staging bootstrap tamplate
-  Author: Colorib
-  Author URI: https://www.colorib.com//
-  Version: 1.0
-  Created: Colorib
-******************************************************************/
 
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-2.  Helper Css
-3.  Header Section
-4.  Hero Section
-5.  Banner Section
-6.  Product Section
-7.  Intagram Section
-8.  Latest Section
-9.  Contact
-10.  Footer Style
--------------------------------------------------------------------*/
-
-/*----------------------------------------*/
-
-/* Template default CSS
-/*----------------------------------------*/
 
 :root {
   --primary: hsl(345deg 6.25% 12.55%);
@@ -690,6 +659,7 @@ ol {
 
 .project {
   padding: 0 15px;
+  margin-bottom: 50px;
 }
 
 .project__slider__item {
@@ -756,7 +726,7 @@ ol {
 }
 
 .videos__slider__item {
-  height: 600px;
+  height: 270px;
   position: relative;
   overflow: hidden;
 }
@@ -949,8 +919,7 @@ ol {
   position: relative;
   overflow: hidden;
   background: #ffffff;
-  padding: 75px 60px 90px;
-  margin-bottom: 20px;
+  padding: 50px 60px 90px;
   -webkit-box-shadow: 0px 15px 60px rgba(67, 69, 70, 0.1);
   box-shadow: 0px 15px 60px rgba(67, 69, 70, 0.1);
 }
@@ -1034,11 +1003,11 @@ ol {
 }
 
 .testimonial__item p {
-  font-size: 24px;
+  font-size: 15px;
   color: #111111;
   font-weight: 300;
   font-style: italic;
-  line-height: 48px;
+  line-height: 22px;
 }
 
 .testimonial__client {
@@ -1591,6 +1560,13 @@ ol {
   margin-right: 30px;
 }
 
+.footer__logo img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 .footer__about .footer__social a:hover {
   color: #d3b8b0;
 }
@@ -1769,7 +1745,6 @@ ol {
   z-index: 1001;
   padding: 10px;
   background: #fff;
-  z-index: 1000;
   align-items: center;
   justify-content: center;
   isolation: isolate;
