--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -44,7 +44,7 @@ h6 {
   margin: 0;
   color: #111111;
   font-weight: 400;
-  font-family: 'Aldrich', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 h1 {
