--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  color: #111111;
+  color: #343433;
   font-weight: 400;
   font-family: "Poppins", sans-serif;
 }
@@ -106,7 +106,7 @@ ol {
 
 .section-title h2 {
   font-size: 42px;
-  color: #111111;
+  color: #343433;
   line-height: 50px;
   text-transform: uppercase;
 }
@@ -151,7 +151,7 @@ ol {
 }
 
 .primary-btn.normal-btn {
-  color: #111111;
+  color: #343433;
 }
 
 .primary-btn.normal-btn:before {
@@ -326,7 +326,7 @@ ol {
 
 .header__menu ul li .dropdown li a {
   font-size: 14px;
-  color: #111111;
+  color: #343433;
   font-weight: 400;
   padding: 5px 20px;
   text-transform: capitalize;
@@ -688,7 +688,7 @@ ol {
   width: 50px;
   background: #ffffff;
   font-size: 28px;
-  color: #111111;
+  color: #343433;
   position: absolute;
   left: 35px;
   top: 50%;
@@ -709,7 +709,7 @@ ol {
   width: 50px;
   background: #ffffff;
   font-size: 28px;
-  color: #111111;
+  color: #343433;
   position: absolute;
   left: 35px;
   top: 50%;
@@ -841,7 +841,7 @@ ol {
 }
 
 .project__slider__item__hover h5 {
-  color: #111111;
+  color: #343433;
   font-size: 20px;
   text-transform: uppercase;
   position: relative;
@@ -895,7 +895,7 @@ ol {
 }
 
 .videos__slider__item__hover h5 {
-  color: #111111;
+  color: #343433;
   font-size: 20px;
   text-transform: uppercase;
   position: relative;
@@ -939,7 +939,7 @@ ol {
 
 .testimonial__carousel button.slick-arrow {
   font-size: 28px;
-  color: #111111;
+  color: #343433;
   position: absolute;
   left: 30px;
   top: 50%;
@@ -1004,7 +1004,7 @@ ol {
 
 .testimonial__item p {
   font-size: 15px;
-  color: #111111;
+  color: #343433;
   font-weight: 300;
   font-style: italic;
   line-height: 22px;
@@ -1092,7 +1092,7 @@ ol {
 }
 
 .testimonial__client__item h5 {
-  color: #111111;
+  color: #343433;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   font-size: 15px;
@@ -1342,7 +1342,7 @@ ol {
 }
 
 .latest__item__text h4 {
-  color: #111111;
+  color: #343433;
   font-size: 22px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -1352,7 +1352,7 @@ ol {
 
 .latest__item__text a {
   font-size: 14px;
-  color: #111111;
+  color: #343433;
   font-weight: 600;
   position: relative;
   padding-left: 40px;
@@ -1389,7 +1389,7 @@ ol {
 }
 
 .project__item h4 a {
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
 }
 
@@ -1412,7 +1412,7 @@ ol {
 }
 
 .project__sidebar__about h2 {
-  color: #111111;
+  color: #343433;
   line-height: 50px;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -1438,12 +1438,12 @@ ol {
 }
 
 .product__details__widget__item h4 {
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
 }
 
 .product__details__widget__item p {
-  color: #111111;
+  color: #343433;
   font-size: 24px;
   line-height: 36px;
 }
@@ -1875,7 +1875,7 @@ ol {
 }
 
 .services.services-page .services__item ul li {
-  color: #111111;
+  color: #343433;
   font-size: 15px;
   line-height: 36px;
   list-style: none;
@@ -1905,7 +1905,7 @@ ol {
 }
 
 .services__item h4 {
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
   margin-top: 12px;
   font-size: 1.125rem;
@@ -1987,7 +1987,7 @@ ol {
 }
 
 .counter__item__text h5 {
-  color: #111111;
+  color: #343433;
   line-height: 24px;
   text-transform: uppercase;
 }
@@ -2069,7 +2069,7 @@ ol {
 }
 
 .blog__item h2 {
-  color: #111111;
+  color: #343433;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   line-height: 48px;
@@ -2086,7 +2086,7 @@ ol {
 
 .blog__item__text a {
   font-size: 14px;
-  color: #111111;
+  color: #343433;
   font-weight: 600;
   position: relative;
   padding-left: 40px;
@@ -2101,7 +2101,7 @@ ol {
   top: 8px;
   height: 1px;
   width: 30px;
-  background: #111111;
+  background: #343433;
   content: "";
   -webkit-transition: all, 0.5s;
   -o-transition: all, 0.5s;
@@ -2150,7 +2150,7 @@ ol {
 
 .blog__pagination a {
   font-size: 15px;
-  color: #111111;
+  color: #343433;
   font-weight: 600;
   display: inline-block;
   height: 40px;
@@ -2193,7 +2193,7 @@ ol {
 }
 
 .blog__sidebar__about p {
-  color: #353535;
+  color: #343433;
   margin-top: 22px;
   margin-bottom: 25px;
 }
@@ -2252,7 +2252,7 @@ ol {
 
 .blog__sidebar__categories h5 {
   font-size: 20px;
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
@@ -2270,7 +2270,7 @@ ol {
 
 .blog__sidebar__feature h5 {
   font-size: 20px;
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
   margin-bottom: 30px;
 }
@@ -2305,7 +2305,7 @@ ol {
 }
 
 .blog__sidebar__feature__item__text h6 {
-  color: #111111;
+  color: #343433;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -2318,7 +2318,7 @@ ol {
 
 .blog__sidebar__tag h5 {
   font-size: 20px;
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
   margin-bottom: 15px;
 }
@@ -2354,7 +2354,7 @@ ol {
 }
 
 .blog__sidebar__tag a:hover {
-  color: #111111;
+  color: #343433;
 }
 
 .blog__sidebar__social {
@@ -2363,7 +2363,7 @@ ol {
 
 .blog__sidebar__social h5 {
   font-size: 20px;
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
   margin-bottom: 18px;
 }
@@ -2409,7 +2409,7 @@ ol {
 
 .blog__sidebar__newslatter h5 {
   font-size: 20px;
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
   margin-bottom: 18px;
 }
@@ -2450,7 +2450,7 @@ ol {
 
 .blog__sidebar__newslatter form button {
   font-size: 18px;
-  color: #111111;
+  color: #343433;
   border: none;
   background: transparent;
   position: absolute;
@@ -2516,7 +2516,7 @@ ol {
 }
 
 .blog__details__title h2 {
-  color: #111111;
+  color: #343433;
   font-size: 48px;
   font-family: "Poppins", sans-serif;
   line-height: 60px;
@@ -2533,7 +2533,7 @@ ol {
 
 .blog__details__title p {
   font-size: 18px;
-  color: #7d8184;
+  color: #7F7C7B;
   line-height: 32px;
   margin-bottom: 0;
 }
@@ -2544,7 +2544,7 @@ ol {
 
 .blog__details__text p {
   font-size: 18px;
-  color: #7d8184;
+  color: #7F7C7B;
   line-height: 32px;
 }
 
@@ -2571,7 +2571,7 @@ ol {
 
 .blog__details__tags span {
   font-size: 13px;
-  color: #111111;
+  color: #343433;
   margin-right: 6px;
 }
 
@@ -2606,7 +2606,7 @@ ol {
 }
 
 .blog__details__tags a:hover {
-  color: #111111;
+  color: #343433;
 }
 
 .blog__details__social {
@@ -2617,7 +2617,7 @@ ol {
 .blog__details__social a {
   display: inline-block;
   font-size: 18px;
-  color: #353535;
+  color: #343433;
   margin-right: 28px;
 }
 
@@ -2645,14 +2645,14 @@ ol {
 }
 
 .blog__details__author__text h5 {
-  color: #111111;
+  color: #343433;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 12px;
 }
 
 .blog__details__author__text p {
-  color: #7d8184;
+  color: #7F7C7B;
   font-size: 18px;
   line-height: 32px;
   margin-bottom: 0;
@@ -2706,12 +2706,12 @@ ol {
 .blog__details__btns__item__text h5 {
   font-size: 20px;
   font-family: "Poppins", sans-serif;
-  color: #353535;
+  color: #343433;
   font-weight: 600;
 }
 
 .blog__details__comment__form h4 {
-  color: #111111;
+  color: #343433;
   text-transform: uppercase;
   margin-bottom: 35px;
 }
@@ -2779,7 +2779,7 @@ ol {
 }
 
 .blog__details__comment__form form button {
-  background: #111111;
+  background: #343433;
 }
 
 /*---------------------
@@ -2838,7 +2838,7 @@ ol {
 }
 
 .contact__widget__item__text span {
-  color: #111111;
+  color: #343433;
   display: block;
 }
 
@@ -3362,7 +3362,7 @@ ol {
     left: -300px;
     width: 300px;
     height: 100%;
-    background: #111111;
+    background: #343433;
     padding: 50px 20px 30px 30px;
     display: block;
     z-index: 99;
@@ -3496,7 +3496,7 @@ ol {
     left: -300px;
     width: 300px;
     height: 100%;
-    background: #111111;
+    background: #343433;
     padding: 50px 20px 30px 30px;
     display: block;
     z-index: 99;
